; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_mount.c_mount_stop.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_mount.c_mount_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@MOUNT_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Unexpected state.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @mount_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mount_stop(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call %struct.TYPE_7__* @MOUNT(i32* %5)
  store %struct.TYPE_7__* %6, %struct.TYPE_7__** %4, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %8 = call i32 @assert(%struct.TYPE_7__* %7)
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  switch i32 %11, label %30 [
    i32 130, label %12
    i32 129, label %12
    i32 128, label %12
    i32 135, label %13
    i32 134, label %13
    i32 133, label %13
    i32 131, label %17
    i32 132, label %20
    i32 136, label %23
    i32 137, label %26
  ]

12:                                               ; preds = %1, %1, %1
  store i32 0, i32* %2, align 4
  br label %32

13:                                               ; preds = %1, %1, %1
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %15 = load i32, i32* @MOUNT_SUCCESS, align 4
  %16 = call i32 @mount_enter_signal(%struct.TYPE_7__* %14, i32 128, i32 %15)
  store i32 0, i32* %2, align 4
  br label %32

17:                                               ; preds = %1
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %19 = call i32 @mount_set_state(%struct.TYPE_7__* %18, i32 128)
  store i32 0, i32* %2, align 4
  br label %32

20:                                               ; preds = %1
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %22 = call i32 @mount_set_state(%struct.TYPE_7__* %21, i32 129)
  store i32 0, i32* %2, align 4
  br label %32

23:                                               ; preds = %1
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %25 = call i32 @mount_enter_unmounting(%struct.TYPE_7__* %24)
  store i32 1, i32* %2, align 4
  br label %32

26:                                               ; preds = %1
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %28 = load i32, i32* @MOUNT_SUCCESS, align 4
  %29 = call i32 @mount_enter_signal(%struct.TYPE_7__* %27, i32 129, i32 %28)
  store i32 0, i32* %2, align 4
  br label %32

30:                                               ; preds = %1
  %31 = call i32 @assert_not_reached(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  br label %32

32:                                               ; preds = %12, %13, %17, %20, %23, %26, %30
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local %struct.TYPE_7__* @MOUNT(i32*) #1

declare dso_local i32 @assert(%struct.TYPE_7__*) #1

declare dso_local i32 @mount_enter_signal(%struct.TYPE_7__*, i32, i32) #1

declare dso_local i32 @mount_set_state(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @mount_enter_unmounting(%struct.TYPE_7__*) #1

declare dso_local i32 @assert_not_reached(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
